force-app/main/default/objects/Retail_Invoice__c/Retail_Invoice__c.object-meta.xml
<CustomObject>
    <label>Retail Invoice</label>
    <nameField>
        <label>Retail  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>