force-app/main/default/objects/Retail_Invoice__c/fields/Add_products_to_inventory__c.field-meta.xml
<CustomField>
    <fullName>Add_products_to_inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add products to inventory</label>
    <type>Checkbox</type>
</CustomField>