force-app/main/default/objects/Retail_Invoice__c/fields/Invoice_Copy__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Copy__c</fullName>
    <label>Invoice Copy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>