force-app/main/default/objects/Retail_Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>