force-app/main/default/objects/Retail_Invoice__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>Retail Invoices</relationshipLabel>
    <relationshipName>Retail_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>