force-app/main/default/objects/Retail_Invoice__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Retail_Supplier__c</referenceTo>
    <relationshipLabel>Retail Invoices</relationshipLabel>
    <relationshipName>Retail_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>